Исправление ссылок на курсы

--- a/app/templates/course_detail.html
+++ b/app/templates/course_detail.html
@@ -6,7 +6,7 @@
   <h4>Уроки</h4>
   <ul>
     {% for lesson in course.lessons %}
-      <li><a href="#">{{ lesson.title }}</a></li>
+     <a href="{{ url_for('main.lesson_detail', lesson_id=lesson.id) }}">
     {% endfor %}
   </ul>
 {% endblock %}
