--- a/app/templates/dashboard/instructor_contacts.html
+++ b/app/templates/dashboard/instructor_contacts.html
@@ -17,6 +17,7 @@
   {% endfor %}
   </tbody>
 </table>
+<a class="btn btn-secondary" href="{{ url_for('dashboard.instructor_dashboard') }}">Отмена</a>
 
 {% include "pagination.html" with context %}
 {% endblock %}
