--- a/app/templates/admin/courses_list.html
+++ b/app/templates/admin/courses_list.html
@@ -11,7 +11,7 @@
     <tr>
       <th>#</th>
       <th>Название</th>
-      <th>Slug</th>
+      <th>URL-имя</th>
       <th>Уровень</th>
       <th>Опубликован</th>
       <th></th>
